--- a/basic-git-commands.html
+++ b/basic-git-commands.html
@@ -38,6 +38,10 @@
                 <td>git add 'filename'</td>
                 <td>Add the specific files to the online git repository.</td>
             </tr>
+            <tr>
+                <td>git commit</td>
+                <td>Commit the changes that we added to the online git repository.</td>
+            </tr>
         </tbody>
     </table>
 
