--- a/basic-git-commands.html
+++ b/basic-git-commands.html
@@ -35,12 +35,20 @@
                 <td>Add all the files to the online git repository from current folder.</td>
             </tr>
             <tr>
-                <td>git add 'filename'</td>
+                <td>git add "filename"</td>
                 <td>Add the specific files to the online git repository.</td>
             </tr>
             <tr>
-                <td>git commit</td>
+                <td>git commit -m "message"</td>
                 <td>Commit the changes that we added to the online git repository.</td>
+            </tr>
+            <tr>
+                <td>git log --online</td>
+                <td>show a brief log of commits.</td>
+            </tr>
+            <tr>
+                <td>git checkout 'commit' 'filename'<br><b>e.g</b><br>git checkout 900cfcf index.html</td>
+                <td>Checkout the specific commit and reset the git repository to the various version.</td>
             </tr>
         </tbody>
     </table>
