--- a/basic-git-commands.html
+++ b/basic-git-commands.html
@@ -43,7 +43,7 @@
                 <td>Commit the changes that we added to the online git repository.</td>
             </tr>
             <tr>
-                <td>git log --online</td>
+                <td>git log --oneline</td>
                 <td>show a brief log of commits.</td>
             </tr>
             <tr>
