--- a/basic-git-commands.html
+++ b/basic-git-commands.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>git-test</title>
+    <title>Basic git commands</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="shortcut icon" href="img/git_dark.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -14,7 +14,7 @@
 <body class="container mt-3">
 
     <h2 class="text-center bg-info text-light p-1 rounded">Basic <img src="img/git.png" style="width:30px;" alt="" srcset=""> commands.</h2>
-    <table class="table table-striped table-light rounded">
+    <table class="table table-striped table-light ">
         <thead>
             <tr class="bg-dark text-light">
                 <th scope="col" class="w-25">git commands</th>
@@ -48,7 +48,20 @@
             </tr>
             <tr>
                 <td>git checkout 'commit' 'filename'<br><b>e.g</b><br>git checkout 900cfcf index.html</td>
-                <td>Checkout the specific commit and reset the git repository to the various version.</td>
+                <td>Checkout the specific commit and reset the git repository to the previous version upto that commit.</td>
+            </tr>
+            <tr>
+                <td>git reset HEAD 'filename'</td>
+                <td>Reset the stageing area to the last Commit without changing the current working directory.</td>
+            </tr>
+
+            <tr>
+                <td>git remote add origin 'repository url'<br><b>e.g</b><br>git remote add origin https://github.com/CodeWithShakaib/basic_git_commands.git</td>
+                <td>Add to the remote online repository.</td>
+            </tr>
+            <tr>
+                <td>git push -u origin master</td>
+                <td>Push the local git repository to the origin master branch.</td>
             </tr>
         </tbody>
     </table>
