--- a/basic-git-commands.html
+++ b/basic-git-commands.html
@@ -63,6 +63,14 @@
                 <td>git push -u origin master</td>
                 <td>Push the local git repository to the origin master branch.</td>
             </tr>
+            <tr>
+                <td>git config --global user.name "Bob"<br>git config --global user.email "bob@example.com"</td>
+                <td>Through these commands you can change user to the git bash. or login to that account</td>
+            </tr>
+
+           
+
+
         </tbody>
     </table>
 
